fix: overflow in list options map address

--- a/src/app/components/map/create/create.component.scss
+++ b/src/app/components/map/create/create.component.scss
@@ -19,6 +19,8 @@
         .filter-selection {
             min-width: 50%;
             width: 100%;
+            height: 220px;
+            overflow: auto;
             mat-selection-list {
                 width: 100%;
                 mat-list-option {
